add excel writer class

--- a/data/analysis/90_output.ipynb
+++ b/data/analysis/90_output.ipynb
@@ -132,7 +132,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "09208c30-4a76-4a78-8de2-c35f84e1a540",
+       "ref": "ae3ba4fd-3246-4c89-942c-d49cbf60d2fa",
        "rows": [
         [
          "0",
@@ -453,7 +453,7 @@
          "type": "float"
         }
        ],
-       "ref": "c4d98e87-b2f4-4274-9a58-6ce0979a7acc",
+       "ref": "e49f7199-4415-4ccb-8a9a-ab6cb82531f5",
        "rows": [
         [
          "0",
@@ -667,7 +667,7 @@
          "type": "float"
         }
        ],
-       "ref": "8f50e7b5-e83a-4c79-8869-d3a2fbf25a41",
+       "ref": "3b40e8e0-0cf1-4699-8ee0-527ed883a2f9",
        "rows": [
         [
          "0",
@@ -770,69 +770,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from excel_writer import ExcelWriter\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-08-02 04:50:45.453\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=1, self.cur_col=1\u001b[0m\n",
+      "\u001b[32m2025-08-02 04:50:45.497\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=9, self.cur_col=1\u001b[0m\n",
+      "\u001b[32m2025-08-02 04:50:45.530\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=18, self.cur_col=1\u001b[0m\n",
+      "\u001b[32m2025-08-02 04:50:45.584\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=1, self.cur_col=1\u001b[0m\n",
+      "\u001b[32m2025-08-02 04:50:45.636\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=9, self.cur_col=1\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ExcelWriter(file_path='output\\test.xlsx', load=False,sheet_name=Sheet2), cur_row=18, cur_col=1, distance_bw_tables=2)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ew = ExcelWriter(file_path=Path(\"output/test.xlsx\"))\n",
+    "(\n",
+    "    ew\n",
+    "    .write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
+    "    .write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n",
+    "    .write_df(tbl2, title=\"Table 2: Pivoted DataFrame\")\n",
+    "    .add_and_switch_to_sheet(\"Sheet2\")\n",
+    "    .write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
+    "    .write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write df to a sheet top left in Excel file\n",
-    "with pd.ExcelWriter(\"output/output0.xlsx\") as writer:\n",
-    "    tbl.to_excel(writer, sheet_name=\"table 1\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import openpyxl\n",
-    "import pandas as pd\n",
-    "from loguru import logger\n",
-    "\n",
-    "class ExcelDfWriter(object):\n",
-    "    def __init__(self, writer: pd.ExcelWriter, sheet_name:str):\n",
-    "        self.writer = writer\n",
-    "        \n",
-    "        self.start_row = 1\n",
-    "        self.start_col = 1\n",
-    "        self.cur_row = self.start_row\n",
-    "        self.cur_col = self.start_col\n",
-    "        self.distance_bw_tables = 2\n",
-    "\n",
-    "        self.add_sheet(sheet_name)\n",
-    "\n",
-    "    def add_sheet(self, sheet_name: str):\n",
-    "        self.writer.book.create_sheet(sheet_name)\n",
-    "        self.sheet_name = sheet_name\n",
-    "        self.cur_row = self.start_row\n",
-    "        self.worksheet = self.writer.sheets[self.sheet_name]\n",
-    "\n",
-    "    def write(self, df: pd.DataFrame, title: str = None, index=False):\n",
-    "        # logger.debug(f\"{self.cur_row=}, {self.cur_col=}\")\n",
-    "        self.worksheet.cell(row=self.cur_row, column=self.cur_col, value=title if title else \"\")\n",
-    "        self.cur_row += 1\n",
-    "\n",
-    "        df.to_excel(self.writer, sheet_name=self.sheet_name, index=index, startrow=self.cur_row-1, startcol=self.cur_col-1)\n",
-    "        self.cur_row += df.shape[0] + self.distance_bw_tables\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with pd.ExcelWriter(\"output/output0.xlsx\", engine='openpyxl') as writer:\n",
-    "    edw = ExcelDfWriter(writer, sheet_name=\"MySheet\")\n",
-    "    edw.write(tbl0, title=\"Table 0: Head of DataFrame\", index=True)\n",
-    "    edw.write(tbl, title=\"Table 1: Grouped DataFrame\", index=True)\n",
-    "    edw.write(tbl2, title=\"Table 2: Pivoted DataFrame\", index=True)\n",
-    "\n",
-    "    edw.add_sheet(\"MySheet2\")\n",
-    "    edw.write(tbl0, title=\"Table 0: Head of DataFrame\", index=True)\n",
-    "    edw.write(tbl, title=\"Table 1: Grouped DataFrame\", index=True)\n",
-    "    \n"
+    "# # write df to a sheet top left in Excel file\n",
+    "# with pd.ExcelWriter(\"output/output0.xlsx\") as writer:\n",
+    "#     tbl.to_excel(writer, sheet_name=\"table 1\", index=False)"
    ]
   },
   {
@@ -879,11 +873,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### write text"
+   ]
   },
   {
    "cell_type": "code",
