make excel writer as context manager

--- a/data/analysis/90_output.ipynb
+++ b/data/analysis/90_output.ipynb
@@ -132,7 +132,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "ae3ba4fd-3246-4c89-942c-d49cbf60d2fa",
+       "ref": "3ce11d06-bb16-4858-9928-8188b81a8ea0",
        "rows": [
         [
          "0",
@@ -453,7 +453,7 @@
          "type": "float"
         }
        ],
-       "ref": "e49f7199-4415-4ccb-8a9a-ab6cb82531f5",
+       "ref": "86dd9dbd-88e0-45d4-a41e-071a02302666",
        "rows": [
         [
          "0",
@@ -667,7 +667,7 @@
          "type": "float"
         }
        ],
-       "ref": "3b40e8e0-0cf1-4699-8ee0-527ed883a2f9",
+       "ref": "45aea789-39ef-4057-855a-87459275f61e",
        "rows": [
         [
          "0",
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,42 +780,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-08-02 04:50:45.453\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=1, self.cur_col=1\u001b[0m\n",
-      "\u001b[32m2025-08-02 04:50:45.497\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=9, self.cur_col=1\u001b[0m\n",
-      "\u001b[32m2025-08-02 04:50:45.530\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=18, self.cur_col=1\u001b[0m\n",
-      "\u001b[32m2025-08-02 04:50:45.584\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=1, self.cur_col=1\u001b[0m\n",
-      "\u001b[32m2025-08-02 04:50:45.636\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m68\u001b[0m - \u001b[34m\u001b[1mself.cur_row=9, self.cur_col=1\u001b[0m\n"
+      "\u001b[32m2025-08-02 16:16:14.533\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__enter__\u001b[0m:\u001b[36m55\u001b[0m - \u001b[34m\u001b[1mOpening ExcelWriter in w mode for output\\test.xlsx\u001b[0m\n",
+      "\u001b[32m2025-08-02 16:16:14.536\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_existing_or_new_sheet\u001b[0m:\u001b[36m70\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet\u001b[0m\n",
+      "\u001b[32m2025-08-02 16:16:14.538\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 0: Head of DataFrame on Sheet at R1, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 16:16:14.546\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 1: Grouped DataFrame on Sheet at R9, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 16:16:14.548\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 2: Pivoted DataFrame on Sheet at R18, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 16:16:14.550\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_existing_or_new_sheet\u001b[0m:\u001b[36m70\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet2\u001b[0m\n",
+      "\u001b[32m2025-08-02 16:16:14.551\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 0: Head of DataFrame on Sheet2 at R1, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 16:16:14.554\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 1: Grouped DataFrame on Sheet2 at R9, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 16:16:14.555\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__exit__\u001b[0m:\u001b[36m66\u001b[0m - \u001b[34m\u001b[1mExiting ExcelWriter context manager\u001b[0m\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ExcelWriter(file_path='output\\test.xlsx', load=False,sheet_name=Sheet2), cur_row=18, cur_col=1, distance_bw_tables=2)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ew = ExcelWriter(file_path=Path(\"output/test.xlsx\"))\n",
-    "(\n",
-    "    ew\n",
-    "    .write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
-    "    .write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n",
-    "    .write_df(tbl2, title=\"Table 2: Pivoted DataFrame\")\n",
-    "    .add_and_switch_to_sheet(\"Sheet2\")\n",
-    "    .write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
-    "    .write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n",
-    ")\n"
+    "with ExcelWriter(file_path=Path(\"output/test.xlsx\"), mode='w') as ew:\n",
+    "    (\n",
+    "        ew\n",
+    "        .write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
+    "        .write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n",
+    "        .write_df(tbl2, title=\"Table 2: Pivoted DataFrame\")\n",
+    "        .switch_to_existing_or_new_sheet(\"Sheet2\")\n",
+    "        .write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
+    "        .write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n",
+    "    )\n"
    ]
   },
   {
