excel writer allows run as context man or not

--- a/data/analysis/90_output.ipynb
+++ b/data/analysis/90_output.ipynb
@@ -132,7 +132,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "3ce11d06-bb16-4858-9928-8188b81a8ea0",
+       "ref": "ce5f5e3a-97c3-48d5-9ea2-f397aa93d8fc",
        "rows": [
         [
          "0",
@@ -453,7 +453,7 @@
          "type": "float"
         }
        ],
-       "ref": "86dd9dbd-88e0-45d4-a41e-071a02302666",
+       "ref": "dd31e0ed-3217-4a0a-8119-358346a63c34",
        "rows": [
         [
          "0",
@@ -667,7 +667,7 @@
          "type": "float"
         }
        ],
-       "ref": "45aea789-39ef-4057-855a-87459275f61e",
+       "ref": "aef37d23-ec37-4dba-b63e-3e755674017d",
        "rows": [
         [
          "0",
@@ -787,29 +787,136 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-08-02 16:16:14.533\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__enter__\u001b[0m:\u001b[36m55\u001b[0m - \u001b[34m\u001b[1mOpening ExcelWriter in w mode for output\\test.xlsx\u001b[0m\n",
-      "\u001b[32m2025-08-02 16:16:14.536\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_existing_or_new_sheet\u001b[0m:\u001b[36m70\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet\u001b[0m\n",
-      "\u001b[32m2025-08-02 16:16:14.538\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 0: Head of DataFrame on Sheet at R1, C1\u001b[0m\n",
-      "\u001b[32m2025-08-02 16:16:14.546\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 1: Grouped DataFrame on Sheet at R9, C1\u001b[0m\n",
-      "\u001b[32m2025-08-02 16:16:14.548\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 2: Pivoted DataFrame on Sheet at R18, C1\u001b[0m\n",
-      "\u001b[32m2025-08-02 16:16:14.550\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_existing_or_new_sheet\u001b[0m:\u001b[36m70\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet2\u001b[0m\n",
-      "\u001b[32m2025-08-02 16:16:14.551\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 0: Head of DataFrame on Sheet2 at R1, C1\u001b[0m\n",
-      "\u001b[32m2025-08-02 16:16:14.554\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m79\u001b[0m - \u001b[34m\u001b[1mWriting Table 1: Grouped DataFrame on Sheet2 at R9, C1\u001b[0m\n",
-      "\u001b[32m2025-08-02 16:16:14.555\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__exit__\u001b[0m:\u001b[36m66\u001b[0m - \u001b[34m\u001b[1mExiting ExcelWriter context manager\u001b[0m\n"
+      "\u001b[32m2025-08-02 18:02:49.568\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__enter__\u001b[0m:\u001b[36m69\u001b[0m - \u001b[34m\u001b[1mEnter ExcelWriter: mode = 'w'\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.571\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m102\u001b[0m - \u001b[34m\u001b[1mSheet Sheet does not exist, creating it.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.572\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_make_new_sheet\u001b[0m:\u001b[36m88\u001b[0m - \u001b[34m\u001b[1mCreating new sheet: Sheet\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.573\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m105\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.573\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_reset_cursor\u001b[0m:\u001b[36m116\u001b[0m - \u001b[34m\u001b[1mResetting cursor to 1, 1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.574\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 0: Head of DataFrame on Sheet at R1, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.581\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 1: Grouped DataFrame on Sheet at R9, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.583\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 2: Pivoted DataFrame on Sheet at R18, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.584\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m102\u001b[0m - \u001b[34m\u001b[1mSheet Sheet2 does not exist, creating it.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.585\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_make_new_sheet\u001b[0m:\u001b[36m88\u001b[0m - \u001b[34m\u001b[1mCreating new sheet: Sheet2\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.586\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m105\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet2\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.586\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_reset_cursor\u001b[0m:\u001b[36m116\u001b[0m - \u001b[34m\u001b[1mResetting cursor to 1, 1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.587\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 0: Head of DataFrame on Sheet2 at R1, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.589\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 1: Grouped DataFrame on Sheet2 at R9, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.590\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__exit__\u001b[0m:\u001b[36m83\u001b[0m - \u001b[34m\u001b[1mExit ExcelWriter\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "with ExcelWriter(file_path=Path(\"output/test.xlsx\"), mode='w') as ew:\n",
+    "with ExcelWriter(file_path=Path(\"output/test.xlsx\")) as ew:\n",
     "    (\n",
     "        ew\n",
     "        .write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
     "        .write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n",
     "        .write_df(tbl2, title=\"Table 2: Pivoted DataFrame\")\n",
-    "        .switch_to_existing_or_new_sheet(\"Sheet2\")\n",
+    "        .switch_to_sheet(\"Sheet2\", create_if_not_exists=True)\n",
     "        .write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
     "        .write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n",
     "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-08-02 18:02:49.612\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m124\u001b[0m - \u001b[34m\u001b[1mExcelWriter is not open, opening it now for this method.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.614\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__enter__\u001b[0m:\u001b[36m69\u001b[0m - \u001b[34m\u001b[1mEnter ExcelWriter: mode = 'w'\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.618\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m102\u001b[0m - \u001b[34m\u001b[1mSheet Sheet does not exist, creating it.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.619\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_make_new_sheet\u001b[0m:\u001b[36m88\u001b[0m - \u001b[34m\u001b[1mCreating new sheet: Sheet\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.620\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m105\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.620\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_reset_cursor\u001b[0m:\u001b[36m116\u001b[0m - \u001b[34m\u001b[1mResetting cursor to 1, 1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.621\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 0: Head of DataFrame on Sheet at R1, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.624\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__exit__\u001b[0m:\u001b[36m83\u001b[0m - \u001b[34m\u001b[1mExit ExcelWriter\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ExcelWriter(file_path='output\\test2.xlsx', mode = w, sheet_name=Sheet), cur_row=9, cur_col=1, distance_bw_tables=2)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ew = ExcelWriter(file_path=Path(\"output/test2.xlsx\"))\n",
+    "ew.write_df(tbl0, title=\"Table 0: Head of DataFrame\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-08-02 18:02:49.645\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m124\u001b[0m - \u001b[34m\u001b[1mExcelWriter is not open, opening it now for this method.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.647\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__enter__\u001b[0m:\u001b[36m69\u001b[0m - \u001b[34m\u001b[1mEnter ExcelWriter: mode = 'w'\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.650\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m102\u001b[0m - \u001b[34m\u001b[1mSheet Sheet does not exist, creating it.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.651\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_make_new_sheet\u001b[0m:\u001b[36m88\u001b[0m - \u001b[34m\u001b[1mCreating new sheet: Sheet\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.652\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m105\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.652\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_reset_cursor\u001b[0m:\u001b[36m116\u001b[0m - \u001b[34m\u001b[1mResetting cursor to 1, 1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.653\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 0: Head of DataFrame on Sheet at R1, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.656\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__exit__\u001b[0m:\u001b[36m83\u001b[0m - \u001b[34m\u001b[1mExit ExcelWriter\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.670\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m124\u001b[0m - \u001b[34m\u001b[1mExcelWriter is not open, opening it now for this method.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.672\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__enter__\u001b[0m:\u001b[36m69\u001b[0m - \u001b[34m\u001b[1mEnter ExcelWriter: mode = 'a'\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.702\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m105\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.702\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 1: Grouped DataFrame on Sheet at R9, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.704\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__exit__\u001b[0m:\u001b[36m83\u001b[0m - \u001b[34m\u001b[1mExit ExcelWriter\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.715\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m124\u001b[0m - \u001b[34m\u001b[1mExcelWriter is not open, opening it now for this method.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.716\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__enter__\u001b[0m:\u001b[36m69\u001b[0m - \u001b[34m\u001b[1mEnter ExcelWriter: mode = 'a'\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.737\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m105\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.738\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 2: Pivoted DataFrame on Sheet at R18, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.740\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__exit__\u001b[0m:\u001b[36m83\u001b[0m - \u001b[34m\u001b[1mExit ExcelWriter\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.750\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m102\u001b[0m - \u001b[34m\u001b[1mSheet Sheet2 does not exist, creating it.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.751\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_make_new_sheet\u001b[0m:\u001b[36m88\u001b[0m - \u001b[34m\u001b[1mCreating new sheet: Sheet2\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.751\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m105\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet2\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.752\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_reset_cursor\u001b[0m:\u001b[36m116\u001b[0m - \u001b[34m\u001b[1mResetting cursor to 1, 1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.752\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m124\u001b[0m - \u001b[34m\u001b[1mExcelWriter is not open, opening it now for this method.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.753\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__enter__\u001b[0m:\u001b[36m69\u001b[0m - \u001b[34m\u001b[1mEnter ExcelWriter: mode = 'a'\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.777\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m102\u001b[0m - \u001b[34m\u001b[1mSheet Sheet2 does not exist, creating it.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.778\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m_make_new_sheet\u001b[0m:\u001b[36m88\u001b[0m - \u001b[34m\u001b[1mCreating new sheet: Sheet2\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.778\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m105\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet2\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.779\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 0: Head of DataFrame on Sheet2 at R1, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.781\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__exit__\u001b[0m:\u001b[36m83\u001b[0m - \u001b[34m\u001b[1mExit ExcelWriter\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.794\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m124\u001b[0m - \u001b[34m\u001b[1mExcelWriter is not open, opening it now for this method.\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.795\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__enter__\u001b[0m:\u001b[36m69\u001b[0m - \u001b[34m\u001b[1mEnter ExcelWriter: mode = 'a'\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.820\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mswitch_to_sheet\u001b[0m:\u001b[36m105\u001b[0m - \u001b[34m\u001b[1mSwitching to sheet: Sheet2\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.820\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36mwrite_df\u001b[0m:\u001b[36m137\u001b[0m - \u001b[34m\u001b[1mWriting Table 1: Grouped DataFrame on Sheet2 at R9, C1\u001b[0m\n",
+      "\u001b[32m2025-08-02 18:02:49.822\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mexcel_writer\u001b[0m:\u001b[36m__exit__\u001b[0m:\u001b[36m83\u001b[0m - \u001b[34m\u001b[1mExit ExcelWriter\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ExcelWriter(file_path='output\\test3.xlsx', mode = w, sheet_name=Sheet2), cur_row=18, cur_col=1, distance_bw_tables=2)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ew = ExcelWriter(file_path=Path(\"output/test3.xlsx\"))\n",
+    "ew.write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
+    "ew.write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n",
+    "ew.write_df(tbl2, title=\"Table 2: Pivoted DataFrame\")\n",
+    "ew.switch_to_sheet(\"Sheet2\", create_if_not_exists=True)\n",
+    "ew.write_df(tbl0, title=\"Table 0: Head of DataFrame\")\n",
+    "ew.write_df(tbl, title=\"Table 1: Grouped DataFrame\")\n"
    ]
   },
   {
