--- a/data/db_related/connectors.ipynb
+++ b/data/db_related/connectors.ipynb
@@ -1,7 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c870c8ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
+   "id": "4fc16afc",
+   "metadata": {},
+   "source": [
+    "### postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a0aa59f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"postgresql://dwopt_tester:1234@localhost/dwopt_test\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a443dcbc",
+   "metadata": {},
+   "source": [
+    "### teradata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a65ca3",
    "metadata": {},
    "source": [
     "set up clearscape\n",
@@ -11,7 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "d71aebd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "35260943",
    "metadata": {},
    "outputs": [
     {
@@ -110,9 +147,8 @@
        "0  VERSION  17.20.03.26"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -122,7 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "c7524aba",
    "metadata": {},
    "outputs": [
     {
@@ -196,9 +233,8 @@
        "0  VERSION  17.20.03.26"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -214,7 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "7fa8ab1c",
    "metadata": {},
    "outputs": [
     {
@@ -288,9 +325,8 @@
        "0  VERSION  17.20.03.26"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -307,7 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "128505c8",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "f15021cd",
    "metadata": {},
    "outputs": [
     {
@@ -337,9 +375,8 @@
        "np.int64(3)"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -348,7 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "a3c9ccba",
    "metadata": {},
    "outputs": [
     {
@@ -422,9 +460,8 @@
        "0  VERSION  1"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -444,7 +481,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "076dd7c7",
    "metadata": {},
    "outputs": [
     {
@@ -493,8 +531,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47ce2996",
+   "metadata": {},
+   "source": [
+    "### oracle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "921e2b97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlalchemy as alc\n",
+    "\n",
+    "\n",
+    "# add run method to engine\n",
+    "def run(self, sql):\n",
+    "    with self.begin() as conn:\n",
+    "        res = conn.execute(alc.text(sql))\n",
+    "        if res.returns_rows:\n",
+    "            return pd.DataFrame(res.all(), columns=res.keys())\n",
+    "\n",
+    "\n",
+    "alc.engine.Engine.run = run\n",
+    "\n",
+    "# url\n",
+    "\n",
+    "url_base = \"dwopt_test:1234@localhost:1521/?service_name=XEPDB1 &encoding=UTF-8&nencoding=UTF-8\"\n",
+    "\n",
+    "# use just oracle\n",
+    "url = f\"oracle://{url_base}\"\n",
+    "eng = alc.create_engine(url, echo=True)\n",
+    "\n",
+    "eng.dialect.name\n",
+    "eng.dialect.driver\n",
+    "\n",
+    "eng.run(\"select * from dual\")\n",
+    "\n",
+    "\n",
+    "# oracledb\n",
+    "url = f\"oracle+oracledb://{url_base}\"\n",
+    "bin_path = r\"C:\\app\\User\\product\\21c\\dbhomeXE\\bin\"\n",
+    "eng = alc.create_engine(url, echo=True, thick_mode={\"lib_dir\": bin_path})\n",
+    "\n",
+    "eng.dialect.driver\n",
+    "\n",
+    "eng.run(\"select * from dual\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b978829c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -502,6 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e1d0d820",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -527,5 +620,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
