update pg invert

--- a/data/db_related/db_interfaces/pg_interter/test.ipynb
+++ b/data/db_related/db_interfaces/pg_interter/test.ipynb
@@ -151,7 +151,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "1e05c5a8-9702-485e-a5dd-38333a1a2394",
+       "ref": "cda27968-84db-4a29-98bf-c6cefa50ed56",
        "rows": [
         [
          "0",
@@ -512,6 +512,27 @@
     "\n",
     "df = eng.run(qry)\n",
     "assert len(df['pk'].unique()) == df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b6a70ede",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PgInserter(eng=Engine(postgresql://test_db_user:***@localhost/test_db), schema=test_schema, table=taxi, pkeys=['pk'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pi"
    ]
   },
   {
