--- a/data/analysis/25_sfa.ipynb
+++ b/data/analysis/25_sfa.ipynb
@@ -2138,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2182,7 +2182,7 @@
     "    ax2.yaxis.set_major_formatter(mtick.PercentFormatter(1.0, decimals=pct_decimals))\n",
     "    ax2.set_ylim(*ax2_y_lim)\n",
     "\n",
-    "    return fig, ax, ax2"
+    "    return fig, (ax, ax2)"
    ]
   },
   {
