--- a/data/analysis/05_flags.ipynb
+++ b/data/analysis/05_flags.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "'0b111'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "'0b100'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "'-0b110'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "'0b10'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "'0b1100'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "'0b100'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "'0b11'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "'0b1'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "'0b0'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,9 +344,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HAS_SURVIVED: 1\n",
+      "IS_ALONE: 2\n",
+      "IS_MALE: 4\n",
+      "AGE_BELOW_18: 8\n"
+     ]
+    }
+   ],
    "source": [
     "# define mapping\n",
     "from enum import IntFlag\n",
@@ -355,12 +366,58 @@
     "    HAS_SURVIVED = 1 << 0\n",
     "    IS_ALONE = 1 << 1\n",
     "    IS_MALE = 1 << 2\n",
-    "    AGE_BELOW_18 = 1 << 3"
+    "    AGE_BELOW_18 = 1 << 3\n",
+    "\n",
+    "for flag in Flags:\n",
+    "    print(f\"{flag.name}: {flag.value}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Flags.HAS_SURVIVED: 1>,\n",
+       " <Flags.IS_ALONE: 2>,\n",
+       " <Flags.IS_MALE: 4>,\n",
+       " <Flags.AGE_BELOW_18: 8>]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(Flags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<flag 'Flags'>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(Flags.HAS_SURVIVED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +435,7 @@
          "type": "integer"
         }
        ],
-       "ref": "0f23c6eb-066f-43a7-81f0-31dce031ca29",
+       "ref": "5a2fe363-3873-4c48-b3d6-0b9ca1fbb4fd",
        "rows": [
         [
          "0",
@@ -471,7 +528,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +592,7 @@
          "type": "integer"
         }
        ],
-       "ref": "08499ea7-4f97-4125-b2a4-45aef1fe0291",
+       "ref": "3d2d1b44-7c79-48c3-8973-9a8ae734ff0c",
        "rows": [
         [
          "0",
@@ -835,7 +892,7 @@
        "15  ['HAS_SURVIVED', 'IS_ALONE', 'IS_MALE', 'AGE_B...      1  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,183 +917,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filtering - and condition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(342, 22)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED) == Flags.HAS_SURVIVED, :].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(342, 22)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED) > 0, :].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(109, 22)"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mask = Flags.HAS_SURVIVED | Flags.IS_MALE\n",
-    "df.loc[\n",
-    "    lambda x: x[\"flags\"] & int(mask) == mask,\n",
-    "    :,\n",
-    "].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# filtering - or condition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(810, 22)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[\n",
-    "    lambda x: (x[\"flags\"] & int(Flags.HAS_SURVIVED) == Flags.HAS_SURVIVED) | (x[\"flags\"] & int(Flags.IS_MALE) == Flags.IS_MALE),\n",
-    "    :,\n",
-    "].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# filtering - not condition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(549, 22)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED) != Flags.HAS_SURVIVED, :].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(233, 22)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[lambda x:(x['has_survived'] == 1) & (x['is_male'] == 0),:].shape"
+    "# filtering"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(233, 22)"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.loc[\n",
-    "    lambda x: (x[\"flags\"] & int(Flags.HAS_SURVIVED) == Flags.HAS_SURVIVED) & (x[\"flags\"] & int(Flags.IS_MALE) != Flags.IS_MALE),\n",
-    "    :,\n",
-    "].shape"
+    "res = df.loc[lambda x: x['has_survived'] == 1,:].shape\n",
+    "res3 = df.loc[lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED) > 0, :].shape\n",
+    "assert res == res3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res = df.loc[lambda x:(x['has_survived'] == 1) & (x['is_male'] == 1),:].shape\n",
+    "res2 = df.loc[\n",
+    "    lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED | Flags.IS_MALE) == Flags.HAS_SURVIVED | Flags.IS_MALE,\n",
+    "    :,\n",
+    "].shape\n",
+    "assert (res == res2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = df.loc[lambda x: (x[\"has_survived\"] == 1) | (x[\"is_male\"] == 1), :].shape\n",
+    "res3 = df.loc[\n",
+    "    lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED | Flags.IS_MALE) > 0,\n",
+    "    :,\n",
+    "].shape\n",
+    "assert (res == res3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = df.loc[lambda x: (x[\"has_survived\"] == 0), :].shape\n",
+    "res3 = df.loc[lambda x: x[\"flags\"] & int(Flags.HAS_SURVIVED) == 0, :].shape\n",
+    "assert (res == res3)"
+   ]
   },
   {
    "cell_type": "code",
